library/src/libqwizard.h

typedef struct QAbstractButton QAbstractButton;
typedef struct QEvent QEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPixmap QPixmap;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
typedef struct QWizard QWizard;
typedef struct QWizardPage QWizardPage;
QWizard* QWizard_new(QWidget* parent);
QWizard* QWizard_new2();
QWizard* QWizard_new3(QWidget* parent, int flags);
QMetaObject* QWizard_MetaObject(const QWizard* self);
void* QWizard_Metacast(QWizard* self, const char* param1);
int QWizard_Metacall(QWizard* self, int param1, int param2, void** param3);
libqt_string QWizard_Tr(const char* s);
int QWizard_AddPage(QWizard* self, QWizardPage* page);
void QWizard_SetPage(QWizard* self, int id, QWizardPage* page);
void QWizard_RemovePage(QWizard* self, int id);
QWizardPage* QWizard_Page(const QWizard* self, int id);
bool QWizard_HasVisitedPage(const QWizard* self, int id);
libqt_list /* of int */ QWizard_VisitedIds(const QWizard* self);
libqt_list /* of int */ QWizard_PageIds(const QWizard* self);
void QWizard_SetStartId(QWizard* self, int id);
int QWizard_StartId(const QWizard* self);
QWizardPage* QWizard_CurrentPage(const QWizard* self);
int QWizard_CurrentId(const QWizard* self);
bool QWizard_ValidateCurrentPage(QWizard* self);
int QWizard_NextId(const QWizard* self);
void QWizard_SetField(QWizard* self, libqt_string name, QVariant* value);
QVariant* QWizard_Field(const QWizard* self, libqt_string name);
void QWizard_SetWizardStyle(QWizard* self, int style);
int QWizard_WizardStyle(const QWizard* self);
void QWizard_SetOption(QWizard* self, int option);
bool QWizard_TestOption(const QWizard* self, int option);
void QWizard_SetOptions(QWizard* self, int options);
int QWizard_Options(const QWizard* self);
void QWizard_SetButtonText(QWizard* self, int which, libqt_string text);
libqt_string QWizard_ButtonText(const QWizard* self, int which);
void QWizard_SetButtonLayout(QWizard* self, libqt_list /* of int */ layout);
void QWizard_SetButton(QWizard* self, int which, QAbstractButton* button);
QAbstractButton* QWizard_Button(const QWizard* self, int which);
void QWizard_SetTitleFormat(QWizard* self, int format);
int QWizard_TitleFormat(const QWizard* self);
void QWizard_SetSubTitleFormat(QWizard* self, int format);
int QWizard_SubTitleFormat(const QWizard* self);
void QWizard_SetPixmap(QWizard* self, int which, QPixmap* pixmap);
QPixmap* QWizard_Pixmap(const QWizard* self, int which);
void QWizard_SetSideWidget(QWizard* self, QWidget* widget);
QWidget* QWizard_SideWidget(const QWizard* self);
void QWizard_SetDefaultProperty(QWizard* self, const char* className, const char* property, const char* changedSignal);
void QWizard_SetVisible(QWizard* self, bool visible);
QSize* QWizard_SizeHint(const QWizard* self);
void QWizard_CurrentIdChanged(QWizard* self, int id);
void QWizard_HelpRequested(QWizard* self);
void QWizard_CustomButtonClicked(QWizard* self, int which);
void QWizard_PageAdded(QWizard* self, int id);
void QWizard_PageRemoved(QWizard* self, int id);
void QWizard_Back(QWizard* self);
void QWizard_Next(QWizard* self);
void QWizard_SetCurrentId(QWizard* self, int id);
void QWizard_Restart(QWizard* self);
bool QWizard_Event(QWizard* self, QEvent* event);
void QWizard_ResizeEvent(QWizard* self, QResizeEvent* event);
void QWizard_PaintEvent(QWizard* self, QPaintEvent* event);
void QWizard_Done(QWizard* self, int result);
void QWizard_InitializePage(QWizard* self, int id);
void QWizard_CleanupPage(QWizard* self, int id);
libqt_string QWizard_Tr2(const char* s, const char* c);
libqt_string QWizard_Tr3(const char* s, const char* c, int n);
void QWizard_SetOption2(QWizard* self, int option, bool on);
QWizardPage* QWizardPage_new(QWidget* parent);
QWizardPage* QWizardPage_new2();
QMetaObject* QWizardPage_MetaObject(const QWizardPage* self);
void* QWizardPage_Metacast(QWizardPage* self, const char* param1);
int QWizardPage_Metacall(QWizardPage* self, int param1, int param2, void** param3);
libqt_string QWizardPage_Tr(const char* s);
void QWizardPage_SetTitle(QWizardPage* self, libqt_string title);
libqt_string QWizardPage_Title(const QWizardPage* self);
void QWizardPage_SetSubTitle(QWizardPage* self, libqt_string subTitle);
libqt_string QWizardPage_SubTitle(const QWizardPage* self);
void QWizardPage_SetPixmap(QWizardPage* self, int which, QPixmap* pixmap);
QPixmap* QWizardPage_Pixmap(const QWizardPage* self, int which);
void QWizardPage_SetFinalPage(QWizardPage* self, bool finalPage);
bool QWizardPage_IsFinalPage(const QWizardPage* self);
void QWizardPage_SetCommitPage(QWizardPage* self, bool commitPage);
bool QWizardPage_IsCommitPage(const QWizardPage* self);
void QWizardPage_SetButtonText(QWizardPage* self, int which, libqt_string text);
libqt_string QWizardPage_ButtonText(const QWizardPage* self, int which);
void QWizardPage_InitializePage(QWizardPage* self);
void QWizardPage_CleanupPage(QWizardPage* self);
bool QWizardPage_ValidatePage(QWizardPage* self);
bool QWizardPage_IsComplete(const QWizardPage* self);
int QWizardPage_NextId(const QWizardPage* self);
void QWizardPage_CompleteChanged(QWizardPage* self);
libqt_string QWizardPage_Tr2(const char* s, const char* c);
libqt_string QWizardPage_Tr3(const char* s, const char* c, int n);
void QWizardPage_SetField(QWizardPage* self, libqt_string name, QVariant* value);
QVariant* QWizardPage_Field(const QWizardPage* self, libqt_string name);
void QWizardPage_RegisterField(QWizardPage* self, libqt_string name, QWidget* widget);
QWizard* QWizardPage_Wizard(const QWizardPage* self);
void QWizardPage_RegisterField3(QWizardPage* self, libqt_string name, QWidget* widget, const char* property);
void QWizardPage_RegisterField4(QWizardPage* self, libqt_string name, QWidget* widget, const char* property, const char* changedSignal);